update image extension

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body style="background-color: aqua;">
-          <img class="right" src="images/stevie.jpg" alt="Clouds at Practice" />
+          <img class="right" src="images/stevie.png" alt="Clouds at Practice" />
         <h1>Header 1</h1> 
         <h2>Header 2 </h2>
         <h3>Header 3 </h3>
