--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     </head>
 
-    <body style="background-color: aqua;">
+    <body style="background-color: pink;">
           <img class="right" src="images/stevie.png" alt="Huskey and Fat Cat" />
         <h1>Header 1</h1> 
         <h2>Header 2 </h2>
