Changed Css files and added a picture

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 
     </head>
 
-    <body style="background-color: pink;">
-          <img class="right" src="images/stevie.png" alt="Huskey and Fat Cat" />
+    <body style="background-color: aqua;">
         <h1>Header 1</h1> 
         <h2>Header 2 </h2>
         <h3>Header 3 </h3>
